k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pcsaft-api
  namespace: pcsaft
spec:
  selector:
    app: pcsaft-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
